# Partnerfy

./: .gitignore  INSTRUCTIONS.md  README.md  UI_IMPROVEMENTS_PROMPT.md  WORKFLOW.md  cov_p2ms.simf  cov_p2ms.wit  elements.conf.example  p2ms.simf  p2ms.wit
partnerfy_app/: Cargo.toml  Dioxus.toml  README.md  voucher.simf
partnerfy_app/assets/styling/: main.css  navbar.css
partnerfy_app/src/: main.rs
partnerfy_app/src/app_core/: elements_rpc.rs  hal_wrapper.rs  mod.rs  models.rs  tx_builder.rs  witness.rs
partnerfy_app/src/views/: instructions.rs  landing.rs  mod.rs  navbar.rs  p2ms.rs  participant.rs  partner.rs  promoter.rs  voucher.rs
